feature: add draft implementation of timeline
This commit adds a preliminary implementation for the timeline overview.

Other than that performed some minor code cleanup.

--- a/src/Wko.BabyTracker.Web/Wko.BabyTracker.Web.csproj
+++ b/src/Wko.BabyTracker.Web/Wko.BabyTracker.Web.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Features\Timeline\Components" />
+      <Folder Include="Features\Timeline\Shared" />
     </ItemGroup>
 
 </Project>
