--- a/src/Wko.BabyTracker.Web/Wko.BabyTracker.Web.csproj
+++ b/src/Wko.BabyTracker.Web/Wko.BabyTracker.Web.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
       <Folder Include="Features\Timeline\Shared" />
+      <Folder Include="wwwroot\fontawesomefree" />
     </ItemGroup>
 
     <ItemGroup>
@@ -41,6 +42,18 @@
         <AutoGen>True</AutoGen>
         <DependentUpon>ApplicationLabels.resx</DependentUpon>
       </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\FONT-LICENSE" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\font\css\open-iconic-bootstrap.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\font\fonts\open-iconic.eot" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\font\fonts\open-iconic.otf" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\font\fonts\open-iconic.svg" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\font\fonts\open-iconic.ttf" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\font\fonts\open-iconic.woff" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\ICON-LICENSE" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\open-iconic\README.md" />
     </ItemGroup>
 
 </Project>
