--- a/src/Wko.BabyTracker/wwwroot/js/src/package.json
+++ b/src/Wko.BabyTracker/wwwroot/js/src/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "watch": "vite build -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
