--- a/src/Wko.BabyTracker.Core/Wko.BabyTracker.Core.csproj
+++ b/src/Wko.BabyTracker.Core/Wko.BabyTracker.Core.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.JSInterop" Version="7.0.4" />
     </ItemGroup>
 
 </Project>
