--- a/.github/workflows/build-babytrack.yml
+++ b/.github/workflows/build-babytrack.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Publish
         run: dotnet publish src/Wko.BabyTracker/Wko.BabyTracker.csproj --configuration Release --no-build --no-restore --output ./publish
       - name: Change base-tag in index.html from / to BabyTracker
-        run: sed -i 's/<base href="\/" \/>/<base href="\/BabyTracker\/" \/>/g' publish/wwwroot/index.html
+        run: sed -i 's/<base href="\/" \/>/<base href="\/babytracker\/" \/>/g' publish/wwwroot/index.html
       - name: Add .nojekyll file
         run: touch publish/wwwroot/.nojekyll
       - name: Commit wwwroot to GitHub Pages
