adjust build actions for pwa support

--- a/.github/workflows/build-babytrack.yml
+++ b/.github/workflows/build-babytrack.yml
@@ -29,6 +29,33 @@ jobs:
         run: dotnet publish src/Wko.BabyTracker/Wko.BabyTracker.csproj --configuration Release --no-build --no-restore --output ./publish
       - name: Change base-tag in index.html from / to BabyTracker
         run: sed -i 's/<base href="\/" \/>/<base href="\/babytracker\/" \/>/g' publish/wwwroot/index.html
+        
+      - name: Fix service-worker-assets.js hashes
+        working-directory: publish/wwwroot
+        run: |
+          jsFile=$(<service-worker-assets.js)
+          json=$(echo "$jsFile" | sed "s/self.assetsManifest = //g" | sed "s/;//g")
+          assets=$(echo "$json" | jq '.assets[]' -c)
+          for asset in $assets
+          do
+          oldHash=$(echo "$asset" | jq '.hash')
+          oldHash="${oldHash:1:-1}"
+          path=$(echo "$asset" | jq '.url')
+          path="${path:1:-1}"
+          newHash="sha256-$(openssl dgst -sha256 -binary $path | openssl base64 -A)"
+          
+          if [ $oldHash != $newHash ]; then
+           # escape slashes for json
+           oldHash=$(echo "$oldHash" | sed 's;/;\\/;g')
+           newHash=$(echo "$newHash" | sed 's;/;\\/;g')
+           echo "Updating hash for $path from $oldHash to $newHash"
+           # escape slashes second time for sed
+           oldHash=$(echo "$oldHash" | sed 's;/;\\/;g')
+           jsFile=$(echo -n "$jsFile" | sed "s;$oldHash;$newHash;g")
+          fi
+          done
+          
+          echo -n "$jsFile" > service-worker-assets.js
       - name: Add .nojekyll file
         run: touch publish/wwwroot/.nojekyll
       - name: Commit wwwroot to GitHub Pages
