--- a/.github/workflows/build-babytrack.yml
+++ b/.github/workflows/build-babytrack.yml
@@ -19,14 +19,19 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+          
       - name: Install dependencies
         run: dotnet restore
+        
       - name: Build
         run: dotnet build --configuration Release --no-restore
+        
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+        
       - name: Publish
         run: dotnet publish src/Wko.BabyTracker/Wko.BabyTracker.csproj --configuration Release --no-build --no-restore --output ./publish
+        
       - name: Change base-tag in index.html from / to BabyTracker
         run: sed -i 's/<base href="\/" \/>/<base href="\/babytracker\/" \/>/g' publish/wwwroot/index.html
         
@@ -55,10 +60,11 @@ jobs:
           fi
           done
           
-          echo -n "$jsFile" > js/service-worker-assets.js
+          echo -n "$jsFile" > service-worker-assets.js
           
       - name: Add .nojekyll file
         run: touch publish/wwwroot/.nojekyll
+        
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
