--- a/src/Wko.BabyTracker/Wko.BabyTracker.csproj
+++ b/src/Wko.BabyTracker/Wko.BabyTracker.csproj
@@ -65,7 +65,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ServiceWorker Include="wwwroot\js\service-worker.js" PublishedContent="wwwroot\js\service-worker.published.js" />
+      <ServiceWorker Include="wwwroot\service-worker.js">
+        <PublishedContent>wwwroot/service-worker.published.js</PublishedContent>
+      </ServiceWorker>
     </ItemGroup>
 
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
