feature: adjust dexie access
Introduce Daos for Child and Timeline Entries
Change Id from Guid to Int since no serverside persistence takes place

--- a/src/Wko.BabyTracker/Wko.BabyTracker.csproj
+++ b/src/Wko.BabyTracker/Wko.BabyTracker.csproj
@@ -29,6 +29,7 @@
 
     <ItemGroup>
       <Folder Include="Features\Timeline\Shared" />
+      <Folder Include="wwwroot\js\dist" />
     </ItemGroup>
 
     <ItemGroup>
