add new assets and fix minor ui issues

--- a/src/Wko.BabyTracker/Wko.BabyTracker.csproj
+++ b/src/Wko.BabyTracker/Wko.BabyTracker.csproj
@@ -30,6 +30,7 @@
     <ItemGroup>
       <Folder Include="Features\Timeline\Shared" />
       <Folder Include="wwwroot\js\dist" />
+      <Folder Include="wwwroot\svg" />
     </ItemGroup>
 
     <ItemGroup>
