add draft ui bus for blazor components

--- a/src/Wko.BabyTracker/Wko.BabyTracker.csproj
+++ b/src/Wko.BabyTracker/Wko.BabyTracker.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Features\Shared\Events" />
       <Folder Include="Features\Timeline\Shared" />
       <Folder Include="wwwroot\js\dist" />
       <Folder Include="wwwroot\svg" />
