feature: add profile creation page
Added corresponding command and handler
Add floating action button to add new profile
Minor UI adjustments

--- a/src/Wko.BabyTracker/Wko.BabyTracker.csproj
+++ b/src/Wko.BabyTracker/Wko.BabyTracker.csproj
@@ -71,7 +71,7 @@
       </ServiceWorker>
     </ItemGroup>
 
-    <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Target Name="PreBuild" BeforeTargets="Compile">
         <Exec Command="npm install" WorkingDirectory="wwwroot/js/src" />
         <Exec Command="npm run build" WorkingDirectory="wwwroot/js/src" />
     </Target>
